--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-
+body{
+    background-color:#faebd6 ;
+}
 h1{
     color: #ff0000;
     font-size: 2em;
     text-align: left;
-    background-color: #faebd6;
-    height: 600px;
-    width: 900px;
+   
 }
 .lorem1{
     color: #a42423;
